--- a/in_theaters/view.html
+++ b/in_theaters/view.html
@@ -9,15 +9,24 @@
             </div>
             <div class="media-body">
                 <h2 class="media-heading">{{item.title}}</h2>
+                <p>类型：<span>{{item.genres.join('、')}}</span> &nbsp;&nbsp;&nbsp;&nbsp; 上映年份: <span>{{item.year}}</span>
+                </p>
                 <p>
                     捣眼：
                     <span ng-repeat="d in item.directors">
-	        	{{d.name}}
-	        	<span ng-if="!$last">、</span>
+	        	{{d.name + ($last?'':'、') }}
+	        	<!-- <span ng-if="!$last">、</span> -->
                     </span>
                 </p>
-                <p>类型：<span>{{item.genres.join('、')}}</span></p>
+                <p>
+                    主演：
+                    <span ng-repeat="c in item.casts">
+                    {{c.name}}{{$last?'':'、'}}
+                    <!-- <span ng-if="!$last">、</span> -->
+                    </span>
+                </p>
             </div>
         </div>
     </a>
 </div>
+<p>总共:{{totalCount}}条记录</p>
