--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <!-- app是主模块 -->
+    <script src="components/Http.js"></script>
     <script src="app.js"></script>
     <!-- 子模块们 -->
     <script src="in_theaters/controller.js"></script>
