--- a/in_theaters/view.html
+++ b/in_theaters/view.html
@@ -12,7 +12,7 @@
                 <p>类型：<span>{{item.genres.join('、')}}</span> &nbsp;&nbsp;&nbsp;&nbsp; 上映年份: <span>{{item.year}}</span>
                 </p>
                 <p>
-                    捣眼：
+                    导演：
                     <span ng-repeat="d in item.directors">
 	        	{{d.name + ($last?'':'、') }}
 	        	<!-- <span ng-if="!$last">、</span> -->
@@ -30,3 +30,10 @@
     </a>
 </div>
 <p>总共:{{totalCount}}条记录</p>
+<!-- 动画是否显示，也可以看做一个模型 -->
+<div class="mask" ng-show="loading">
+    <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
+    </div>
+</div>
