--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Help</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <input type="text" class="form-control" placeholder="Search...">
@@ -39,9 +36,10 @@
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#/in_theaters">正在热映</a></li>
-                    <li><a href="#/coming_soon">即将上映</a></li>
-                    <li><a href="#/top250">top250</a></li>
+                    <li class="active"><a href="#/in_theaters/1">正在热映</a></li>
+                    <li><a href="#/coming_soon/1
+">即将上映</a></li>
+                    <li><a href="#/top250/1">top250</a></li>
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
@@ -54,9 +52,7 @@
     <script src="components/Http.js"></script>
     <script src="app.js"></script>
     <!-- 子模块们 -->
-    <script src="in_theaters/controller.js"></script>
-    <script src="coming_soon/controller.js"></script>
-    <script src="top250/controller.js"></script>
+    <script src="movie_list/controller.js"></script>
 </body>
 
 </html>
