--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
-                <ul class="nav nav-sidebar" ng-controller="NavController">
-                    <li ng-class="{active:type==='in_theaters'}"><a href="#/in_theaters/1">正在热映</a></li>
-                    <li ng-class="{active:type==='coming_soon'}"><a href="#/coming_soon/1">即将上映</a></li>
-                    <li ng-class="{active:type==='top250'}"><a href="#/top250/1">top250</a></li>
+                <!-- <ul class="nav nav-sidebar" ng-controller="NavController">
+    <li ng-class="{active:type==='in_theaters'}"><a href="#/in_theaters/1">正在热映</a></li>
+    <li ng-class="{active:type==='coming_soon'}"><a href="#/coming_soon/1">即将上映</a></li>
+    <li ng-class="{active:type==='top250'}"><a href="#/top250/1">top250</a></li>
+</ul>
+ -->
+                <ul class="nav nav-sidebar">
+                    <li auto-focus><a href="#/in_theaters/1">正在热映</a></li>
+                    <li auto-focus><a href="#/coming_soon/1">即将上映</a></li>
+                    <li auto-focus><a href="#/top250/1">top250</a></li>
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
@@ -47,9 +53,10 @@
     </div>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <!-- app是主模块 -->
-    <script src="components/Http.js"></script>
+    <!-- app是主模块-->
     <script src="app.js"></script>
+    <script src="components/Http.js"></script>
+    <script src="components/auto-focus.js"></script>
     <!-- 子模块们 -->
     <script src="movie_list/controller.js"></script>
 </body>
