'第十二次-detail页面完成'

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="components/Http.js"></script>
     <script src="components/auto-focus.js"></script>
     <!-- 子模块们 -->
+    <script src="movie_detail/controller.js"></script>
     <script src="movie_list/controller.js"></script>
 </body>
 
